--- a/eindex.html
+++ b/eindex.html
@@ -27,7 +27,7 @@
 
     <div class="btns_filter">
         <div class="btns">
-            <button class="all" onclick="showAllTask()">All</button>
+            <button class="all">All</button>
             <button class="active">Pending</button>
             <button class="complete">Finished</button>
             <div class="showChange"></div>
